components/PreviewModal/PreviewModal.module.scss
.preview_modal {
    top: 50%;
    left: 50%;
    right: auto;
    bottom: auto;
    margin-right: -50%;
    transform: translate(-50%, -50%);
    width: 90vw;
    max-width: 800px;
    padding-top: 3rem;
    background-color: #fff;

    // change below
    border-radius: 4px;
    border: 1px solid #ccc;
    overflow: auto;
    outline: none;
    padding: 20px;
    position: absolute;
}

.close_button {
    margin-bottom: 1rem;
    position: absolute;
    top: .5rem;
    right: .5rem;
}

